infra/policies/namespaces/postgres/netpol-allow-from-gatus.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/networkpolicy-networking-v1.json
#
# One file per tenant. See netpol-allow-from-linkwarden.yaml for why this and the Database CR are
# added together.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-gatus
spec:
  podSelector: {}
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gatus
      ports:
        - port: 5432
